--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:description" content="Portfolio de Franco, empezando en el mundo de desarrolo">
     <meta name="robots" content="index, follow">
     <meta name="theme-color" content="#09f"> 
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="index.css">
     <link
     href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"rel="stylesheet"/>
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
