--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="header-items">
             <div class="header-logo">
                 <a class="logo" href="/" title="Ir a la página principal">
-                    <img src="/imagenes/logo.jpg" alt="">
+                    <img src="imagenes/logo.jpg" alt="">
                     <span>XMrFrancoX</span>
                 </a>
             </div>
@@ -38,12 +38,12 @@
         <div class="primer-saludo">
             <p>Hola soy...</p>
             <h1><span>Franco</span><span>Ortiz Ruiz</span></h1>
-            <img  src="/imagenes/logo.jpg" alt="Foto personal">
+            <img  src="imagenes/logo.jpg" alt="Foto personal">
         </div>
         <section id="sobre-mi" class="sobre-mi">
             <div id="sobre-mi" class="section sobre-mi">
                 <div class="photo-container">
-                    <img src="/imagenes/logo.jpg" alt="Foto personal">
+                    <img src="imagenes/logo.jpg" alt="Foto personal">
                 </div>
                 <div class="content">
                     <h2>Sobre mí</h2>
@@ -105,13 +105,13 @@
 
     <footer>
         <a class="link" href="https://www.youtube.com/@XMrFrancoX" target="_blank">
-            <img src="/imagenes/youtube.png" alt="logo de youtube">
+            <img src="imagenes/youtube.png" alt="logo de youtube">
         </a>
         <a class="link" href="https://x.com/XMrFrancoX" target="_blank">
-            <img src="/imagenes/x.png" alt="logo de X">
+            <img src="imagenes/x.png" alt="logo de X">
         </a>
         <a class="link" href="https://www.instagram.com/ffran.ruizz/" target="_blank">
-            <img src="/imagenes/instagram.png" alt="logo de instagram">
+            <img src="imagenes/instagram.png" alt="logo de instagram">
         </a>
     </footer>
 </body>
