--- a/index.html
+++ b/index.html
@@ -17,8 +17,13 @@
 <body>
     <header>
         <div class="header-items">
+            <button class="menu-desplegable" aria-label="Abrir menú">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
             <div class="header-logo">
-                <a class="logo" href="/" title="Ir a la página principal">
+                <a class="logo" href="#" title="Ir a la página principal">
                     <img src="imagenes/logo.jpg" alt="">
                     <span>XMrFrancoX</span>
                 </a>
@@ -31,9 +36,7 @@
                 </ul>
             </nav>
         </div>
-        
     </header>
-
     <main>
         <div class="primer-saludo">
             <p>Hola soy...</p>
