--- a/index.html
+++ b/index.html
@@ -15,25 +15,24 @@
     <title>XMrFrancoX</title>
 </head>
 <body>
-    <script src="index.js"></script>
     <header>
+        <button class="menu-desplegable">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
         <div class="header-items">
-            <button class="menu-desplegable" aria-label="Abrir menú">
-                <span></span>
-                <span></span>
-                <span></span>
-            </button>
             <div class="header-logo">
-                <a class="logo" href="#" title="Ir a la página principal">
-                    <img src="imagenes/logo.jpg" alt="">
-                    <span>XMrFrancoX</span>
+                <a href="#" class="logo">
+                    <img src="imagenes/logo.jpg" alt="Logo">
+                    XMrFrancoX
                 </a>
             </div>
             <nav class="header-navbar">
                 <ul>
-                    <li><a class="link-rapido" href="#sobre-mi"><i class="ri-user-fill"></i><span>Sobre mi</span></a></li>
-                    <li><a class="link-rapido" href="#proyectos"><i class="ri-book-shelf-line"></i><span>Proyectos</span></a></li>
-                    <li><a class="link-rapido" href="#contacto"><i class="ri-mail-send-line"></i><span>Contacto</span></a></li>
+                    <li><a href="#sobre-mi" class="link-rapido">Sobre mi</a></li>
+                    <li><a href="#proyectos" class="link-rapido">Proyectos</a></li>
+                    <li><a href="#contacto" class="link-rapido">Contacto</a></li>
                 </ul>
             </nav>
         </div>
@@ -87,7 +86,6 @@
                 </div>
             </div>
         </section>
-
         <section id="contacto" class="formulario_contacto">
             <h2>Contacto</h2>
             <form  method="post" action="https://formspree.io/f/mzzbvzbv">
@@ -118,5 +116,6 @@
             <img src="imagenes/instagram.png" alt="logo de instagram">
         </a>
     </footer>
+    <script src="index.js"></script>
 </body>
 </html>
