--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
                         Tengo 16 años y soy de Buenos Aires, Argentina, actual estudiante interesado en la programación, voy a la escuela técnica Philips. Aunque aún no he terminado mis estudios, he dedicado mucho tiempo a 
                         aprender y experimentar con lenguajes como Python, HTML y CSS. Me encanta investigar y explorar nuevas tecnologías, como la creación de servidores, y siempre estoy 
                         buscando maneras de mejorar mis habilidades.
-                        A través de mis investigaciones, he descubierto que la programación es una forma fascinante de resolver problemas y crear cosas nuevas. Estoy especialmente 
+                        A través de mis investigaciones, he descubierto que la programación es una forma de resolver problemas y crear cosas nuevas. Estoy especialmente 
                         interesado en seguir aprendiendo y desarrollando proyectos propios.
-                        Si quieres saber más sobre mis trabajos o colaborar en algún proyecto, ¡no dudes en ponerte en contacto conmigo!
+                        Si quieres saber más sobre mis trabajos o colaborar en algún proyecto, ¡no dudes en ponerte en contacto conmigo más abajo!
                     </p>
                 </div>
             </div>
