--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <meta name="robots" content="index, follow">
     <meta name="theme-color" content="#09f"> 
     <link rel="stylesheet" href="index.css">
-    <link
-    href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"rel="stylesheet"/>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"rel="stylesheet"/>
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <title>XMrFrancoX</title>
 </head>
@@ -66,10 +65,10 @@
                 <h2>Proyectos</h2>
                 <div class="project-cards">
                     <div class="project-card">
-                        <img src="#" alt="Proyecto 1">
-                        <h3>Proyecto 1</h3>
-                        <p>Descripción del Proyecto 1</p>
-                        <a href="#" class="project-link">Ir al proyecto</a>
+                        <img src="imagenes/Proyecto1.png" alt="Proyecto 1">
+                        <h3>Web del Clima</h3>
+                        <p>Aplicación web que muestra el clima actual y el pronóstico de los próximos dos días de manera sencilla e intuitiva.</p>
+                        <a href="https://francoortiz1307.github.io/weather/" class="project-link">Ir al proyecto</a>
                     </div>
                     <div class="project-card">
                         <img src="#" alt="Proyecto 2">
