--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <img src="imagenes/Proyecto1.png" alt="Proyecto 1">
                         <h3>Web del Clima</h3>
                         <p>Aplicación web que muestra el clima actual y el pronóstico de los próximos dos días de manera sencilla e intuitiva.</p>
-                        <a href="https://francoortiz1307.github.io/weather/" class="project-link">Ir al proyecto</a>
+                        <a href="https://francoortiz1307.github.io/weather/" class="project-link" target="_blank">Ir al proyecto</a>
                     </div>
                     <div class="project-card">
                         <img src="#" alt="Proyecto 2">
